cloudformationsetup.json
{
    "Description": "CloudFormation script to set up an EC2 instance in AWS with Docker installed in it.",
    "Resources": {
      "WebServerInstance": {
        "Type": "AWS::EC2::Instance",
        "Properties": {
          "AvailabilityZone": "eu-west-1a",
          "ImageId": {
            "Fn::Sub": "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}"
          },  
          "InstanceType": "t2.micro",
          "KeyName": "Trial",
          "SecurityGroups": [
            { "Ref": "WebServerSecurityGroup" }
          ],
          "UserData": { "Fn::Base64": "#!/bin/bash\n yum update -y\n yum install -y docker\n systemctl start docker\n systemctl enable docker\n" }
        }
      },
      "WebServerSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Enable SSH and HTTP access",
          "SecurityGroupIngress": [
            { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": "0.0.0.0/0" },
            { "IpProtocol": "tcp", "FromPort": "8080", "ToPort": "8080", "CidrIp": "0.0.0.0/0" }
          ]
        }
      }
    },
    "Outputs": {
      "InstancePublicIp": {
        "Description": "This is a Public IP address of the newly created EC2 instance.",
        "Value": { "Fn::GetAtt": ["WebServerInstance", "PublicIp"] }
      }
    }
  }
